--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,10 +44,13 @@ jobs:
         run: |
           brew update
           brew install python3
+          python3 -m venv venv
+          source venv/bin/activate
           python3 -m pip install aqtinstall
           mkdir Qt
           cd Qt
           python3 -m aqt install-qt mac desktop 5.12.12 clang_64
+
 
       - name: build macOS
         run: |
