--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,10 @@ jobs:
         shell: cmd
         run: |
           set QTDIR=%GITHUB_WORKSPACE%\Qt\5.12.12\msvc2017_64
-          set PATH=%PATH%;%GITHUB_WORKSPACE%\Qt\5.12.12\msvc2017_64\bin
-          cmd.exe /c build-libffi.bat
-          cmd.exe /c build-ultimate-x64.bat
- 
+          set PATH=%PATH%;%QTDIR%\bin
+          if exist build-libffi.bat (cmd.exe /c build-libffi.bat) else (echo build-libffi.bat not found & exit 1)
+          if exist build-ultimate-x64.bat (cmd.exe /c build-ultimate-x64.bat) else (echo build-ultimate-x64.bat not found & exit 1)
+
       - name: Upload artifact (Windows)
         uses: actions/upload-artifact@v4
         with:
@@ -51,15 +51,15 @@ jobs:
           cd Qt
           python3 -m aqt install-qt mac desktop 5.12.12 clang_64
 
-
       - name: build macOS
         run: |
+          source venv/bin/activate
           export QTDIR=$GITHUB_WORKSPACE/Qt/5.12.12/clang_64
           export PATH=$QTDIR/bin:$PATH
           chmod +x build-libffi.sh
           chmod +x build-ultimate-mac.sh
-          ./build-libffi.sh
-          ./build-ultimate-mac.sh
+          if [ -f ./build-libffi.sh ]; then ./build-libffi.sh; else echo "build-libffi.sh not found"; exit 1; fi
+          if [ -f ./build-ultimate-mac.sh ]; then ./build-ultimate-mac.sh; else echo "build-ultimate-mac.sh not found"; exit 1; fi
 
       - name: Upload artifact (macOS)
         uses: actions/upload-artifact@v4
